@@ -105,7 +105,6 @@ export(umx_default_option)
 export(umx_drop_ok)
 export(umx_explode)
 export(umx_factor)
-export(umx_fake_data)
 export(umx_find_object)
 export(umx_fix_first_loadings)
 export(umx_fix_latents)
@@ -129,8 +128,10 @@ export(umx_is_exogenous)
 export(umx_is_ordered)
 export(umx_lower2full)
 export(umx_make)
+export(umx_make_MR_data)
 export(umx_make_TwinData)
 export(umx_make_bin_cont_pair_data)
+export(umx_make_fake_data)
 export(umx_match.arg)
 export(umx_means)
 export(umx_merge_CIs)
