@@ -5,15 +5,14 @@
 \alias{umxPlot}
 \title{Create a graphical figure from an MxModel}
 \usage{
-\method{plot}{MxModel}(x = NA, std = TRUE, digits = 2, file = "name",
-  pathLabels = c("none", "labels", "both"), showFixed = FALSE,
-  showMeans = TRUE, resid = c("circle", "line", "none"),
-  showError = "deprecated", ...)
+\method{plot}{MxModel}(x = NA, std = FALSE, digits = 2, file = "name",
+  pathLabels = c("none", "labels", "both"), showFixed = TRUE,
+  showMeans = TRUE, resid = c("circle", "line", "none"), ...)
 }
 \arguments{
 \item{x}{An \code{\link{mxModel}} from which to make a path diagram}
 
-\item{std}{Whether to standardize the model.}
+\item{std}{Whether to standardize the model (default = FALSE).}
 
 \item{digits}{The number of decimal places to add to the path coefficients}
 
@@ -21,13 +20,11 @@
 
 \item{pathLabels}{Whether to show labels on the paths. both will show both the parameter and the label. ("both", "none" or "labels")}
 
-\item{showFixed}{Whether to show fixed paths (defaults to FALSE)}
+\item{showFixed}{Whether to show fixed paths (defaults to TRUE)}
 
 \item{showMeans}{Whether to show means}
 
 \item{resid}{How to show residuals and variances default is "circle". Options are "line" & "none"}
-
-\item{showError}{deprecated: use resid instead}
 
 \item{...}{Optional parameters}
 }
