@@ -75,8 +75,10 @@ Other Data Functions: \code{\link{umxCovData}},
   \code{\link{umxPadAndPruneForDefVars}},
   \code{\link{umx_as_numeric}},
   \code{\link{umx_cont_2_quantiles}},
-  \code{\link{umx_cov2raw}}, \code{\link{umx_fake_data}},
+  \code{\link{umx_cov2raw}},
+  \code{\link{umx_make_MR_data}},
   \code{\link{umx_make_bin_cont_pair_data}},
+  \code{\link{umx_make_fake_data}},
   \code{\link{umx_merge_CIs}},
   \code{\link{umx_read_lower}}, \code{\link{umx_reorder}},
   \code{\link{umx_residualize}}, \code{\link{umx_round}},
