@@ -1,10 +1,10 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/misc_and_utility.r
-\name{umx_fake_data}
-\alias{umx_fake_data}
-\title{umx_fake_data}
+\name{umx_make_fake_data}
+\alias{umx_make_fake_data}
+\title{umx_make_fake_data}
 \usage{
-umx_fake_data(dataset, digits = 2, n = NA, use.names = TRUE,
+umx_make_fake_data(dataset, digits = 2, n = NA, use.names = TRUE,
   use.levels = TRUE, use.miss = TRUE, mvt.method = "eigen",
   het.ML = FALSE, het.suppress = TRUE)
 }
@@ -47,7 +47,7 @@ Author:   Ryne Estabrook
 Created:  17 Aug 2010
 }
 \examples{
-fakeCars = umx_fake_data(mtcars)
+fakeCars = umx_make_fake_data(mtcars)
 }
 \seealso{
 Other Data Functions: \code{\link{umxCovData}},
@@ -56,6 +56,7 @@ Other Data Functions: \code{\link{umxCovData}},
   \code{\link{umx_as_numeric}},
   \code{\link{umx_cont_2_quantiles}},
   \code{\link{umx_cov2raw}}, \code{\link{umx_lower2full}},
+  \code{\link{umx_make_MR_data}},
   \code{\link{umx_make_bin_cont_pair_data}},
   \code{\link{umx_merge_CIs}},
   \code{\link{umx_read_lower}}, \code{\link{umx_reorder}},
